--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Filippo Masini - Area Manager Portfolio</title>
+    <title>Filippo Masini - Portfolio Personale</title>
     <link rel="stylesheet" href="style.css">
     <!-- Link a Font Awesome per le icone -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
@@ -14,151 +14,58 @@
 </head>
 <body>
 
-    <header class="header">
-        <div class="container header-content">
+    <header class="hero-section">
+        <div class="container hero-content">
             <img src="https://raw.githubusercontent.com/masini-pro/portfolio/refs/heads/main/Selfie_round.png" alt="Foto Profilo Filippo Masini" class="profile-pic">
-            <div class="header-text">
+            <div class="hero-text">
                 <h1>Filippo Masini</h1>
-                <h2>Area Manager</h2>
+                <h2>Area Manager | Interior Design Sector</h2>
                 <p class="intro">
-                    Filippo aspira ad essere un esperto nel prestigioso mondo dell'interior design
-                    per ville private e spazi pubblici. Possiede una forte visione internazionale ed è sempre
-                    aperto a nuovi scambi e sfide. Da otto anni, gestisce e supervisiona segmenti del mercato
-                    europeo per rinomate aziende italiane.
+                    Esperto nel settore dell'interior design con una forte visione internazionale. Aperto a nuove sfide e scambi, con otto anni di esperienza nella gestione e supervisione di segmenti del mercato europeo per rinomate aziende italiane, focalizzato su ville private e spazi pubblici.
                 </p>
             </div>
-            <!-- Icone di contatto aggiornate (senza telefono) -->
-            <div class="contact-icons">
-                <a href="https://www.linkedin.com/in/fppmasini/" target="_blank" aria-label="LinkedIn"><i class="fab fa-linkedin"></i></a>
-                <a href="mailto:fpp.masini@gmail.com" aria-label="Email"><i class="fas fa-envelope"></i></a>
-                <a href="https://www.instagram.com/masini.pro/" target="_blank" aria-label="Instagram Professionale"><i class="fab fa-instagram-square"></i></a>
-                 <a href="https://www.instagram.com/Fpp.masini/" target="_blank" aria-label="Instagram Privato"><i class="fab fa-instagram"></i></a>
-                <a href="https://www.paypal.com/paypalme/fppmasini" target="_blank" aria-label="PayPal"><i class="fab fa-paypal"></i></a>
-                <!-- Rimosso link telefono: <a href="tel:+393934504095" aria-label="Telefono"><i class="fas fa-phone-alt"></i></a> -->
+            <div class="profile-links">
+                <a href="https://www.linkedin.com/in/fppmasini/" target="_blank" aria-label="LinkedIn" class="link-button linkedin">
+                    <i class="fab fa-linkedin"></i> LinkedIn
+                </a>
+                <a href="mailto:fpp.masini@gmail.com" aria-label="Email" class="link-button email">
+                    <i class="fas fa-envelope"></i> Email
+                </a>
+                <a href="https://www.instagram.com/masini.pro/" target="_blank" aria-label="Instagram Professionale" class="link-button instagram-pro">
+                    <i class="fab fa-instagram-square"></i> Instagram Pro
+                </a>
+                 <a href="https://www.instagram.com/Fpp.masini/" target="_blank" aria-label="Instagram Privato" class="link-button instagram-pers">
+                    <i class="fab fa-instagram"></i> Instagram Personale
+                </a>
+                <a href="https://www.paypal.com/paypalme/fppmasini" target="_blank" aria-label="PayPal" class="link-button paypal">
+                    <i class="fab fa-paypal"></i> PayPal
+                </a>
             </div>
-            <!-- Fine icone aggiornate -->
         </div>
     </header>
 
-    <main class="container">
-        <section id="experience">
-            <h2>Esperienza Lavorativa</h2>
-
-            <article class="job">
-                <h3>Area Manager</h3>
-                <h4>Trend Group S.p.A. | Vicenza (IT)</h4>
-                <p class="date">Mar 2021 - Attuale</p>
-                <ul>
-                    <li>Gestione della rete vendita in Francia (inclusi dom-tom), Belgio, Lussemburgo e Principato di Monaco.</li>
-                    <li>Ricerca e coordinazione armonica delle agenzie di rappresentanza.</li>
-                    <li>Sviluppo di strategie commerciali e di espansione.</li>
-                    <li>Supervisione di progetti architettonici come piscine, facciate esterne, alberghi, progetti pubblici e privati.</li>
-                    <li>Gestione di imprese contractor e di posa in opera.</li>
-                    <li>Prescrizione architetturale e consulenza tecnica agli studi di architettura.</li>
-                </ul>
-            </article>
-
-            <article class="job">
-                <h3>Area Manager</h3>
-                <h4>Sicis s.r.l. | Ravenna (IT)</h4>
-                <p class="date">Mar 2019 - Feb 2021</p>
-                <ul>
-                    <li>Gestione della rete vendita in Francia, Belgio, Lussemburgo e Principato di Monaco.</li>
-                    <li>Ricerca e coordinazione armonica delle agenzie di rappresentanza.</li>
-                    <li>Sviluppo di strategie commerciali e di espansione per mosaici, Vetrite e arredi di pregio.</li>
-                    <li>Supervisione di progetti architettonici, inclusi piscine, facciate esterne, alberghi, progetti pubblici e privati.</li>
-                    <li>Prescrizione architetturale e consulenza tecnica agli studi di architettura per l'integrazione di mosaici e Vetrite nelle loro realizzazioni.</li>
-                </ul>
-            </article>
-
-            <article class="job">
-                <h3>Area Manager Jr.</h3>
-                <h4>ABK Group Industrie Ceramiche S.p.A. | Solignano (IT)</h4>
-                <p class="date">Sett 2016 - Feb 2019</p>
-                <ul>
-                    <li>Supporto alla gestione della rete vendita del Brand Flaviker in Francia, Lussemburgo e Principato di Monaco.</li>
-                    <li>Supporto alla direzione commerciale per la gestione delle agenzie di rappresentanza sul territorio.</li>
-                    <li>Gestione diretta e sviluppo delle regioni Normandia e Loira.</li>
-                    <li>Prescrizione architetturale e organizzazione di eventi rivolti agli studi di architettura.</li>
-                </ul>
-            </article>
-
-            <article class="job">
-                <h3>Agente di commercio</h3>
-                <h4>Vorwerk Italia s.a.s. | Bologna (IT)</h4>
-                <p class="date">Ott 2015 - Ago 2016</p>
-                <ul>
-                    <li>Presidio della zona assegnata mensilmente nel distretto di Modena.</li>
-                    <li>Presentazione e dimostrazione pratica dei prodotti Folletto.</li>
-                    <li>Scouting di nuove opportunità di vendita e fidelizzazione dei clienti.</li>
-                    <li>Gestione autonoma del portafoglio clienti e pianificazione delle visite.</li>
-                    <li>Fornitura di consulenze tecniche e assistenza post-vendita.</li>
-                </ul>
-            </article>
-
-            <article class="job">
-                <h3>Guida turistica & Sommelier</h3>
-                <h4>Musée du Vin et du Négoce | Bordeaux (FR)</h4>
-                <p class="date">Feb 2015 - Ago 2016</p>
-                <ul>
-                    <li>Accoglienza e gestione dei visitatori in italiano, inglese e francese.</li>
-                    <li>Conduzione di visite guidate del museo, con focus sulla storia e la cultura del vino di Bordeaux.</li>
-                    <li>Promozione delle attività e degli eventi del museo.</li>
-                </ul>
-            </article>
-
-        </section>
-
-        <section id="competencies">
-            <h2>Competenze Chiave</h2>
-            <ul>
-                <li>Gestione delle relazioni B2B a livello internazionale</li>
-                <li>Sviluppo e implementazione di strategie commerciali</li>
-                <li>Supervisione di progetti architettonici complessi</li>
-                <li>Coordinamento delle agenzie sul territorio e dei reparti interni all'azienda</li>
-                <li>Conoscenza del mercato Interior Design (ceramiche, mosaici, arredi)</li>
-                <li>Prescrizione tecnica e supporto a studi di architettura</li>
-            </ul>
-        </section>
-
-        <section id="education">
-            <h2>Istruzione</h2>
-             <article class="education-item">
-                <h3>Perito Turistico</h3>
-                <h4>Istituto Paritario Mecenate | Pescara (IT)</h4>
-                <p class="date">2014</p>
-            </article>
-        </section>
-
-        <section id="languages">
-            <h2>Lingue</h2>
-            <ul>
-                <li><strong>Italiano:</strong> Madrelingua</li>
-                <li><strong>Francese:</strong> Conoscenza professionale completa (C1/C2)</li>
-                <li><strong>Inglese:</strong> Conoscenza professionale completa (C1)</li>
-                <li><strong>Spagnolo:</strong> Conoscenza scolastica (A2/B1)</li>
-            </ul>
-        </section>
-
+    <!-- Main content area can be used for future additions if needed -->
+    <main class="container" id="main-content">
+        <!-- Potresti aggiungere qui una piccola sezione "Contattami" o "Progetti" in futuro -->
+         <!-- <h2>Contattami</h2> -->
+         <!-- <p>Puoi raggiungermi tramite i link qui sopra o via email.</p> -->
     </main>
 
     <footer class="footer">
         <div class="container">
-             <!-- Info contatto aggiornate (senza telefono) -->
-             <div class="contact-info-footer">
+             <div class="footer-contact">
                 <p><i class="fas fa-map-marker-alt"></i> Emilia Romagna, Italia</p>
                 <p><i class="fas fa-envelope"></i> <a href="mailto:fpp.masini@gmail.com">fpp.masini@gmail.com</a></p>
-                <!-- Rimosso paragrafo telefono: <p><i class="fas fa-phone-alt"></i> <a href="tel:+393934504095">+39 393 45 04 095</a></p> -->
             </div>
-            <!-- Fine info contatto aggiornate -->
-            <div class="social-links-footer">
+             <div class="social-links-footer">
+                 <!-- Potresti ripetere le icone semplici qui o rimuoverle se preferisci -->
                  <a href="https://www.linkedin.com/in/fppmasini/" target="_blank" aria-label="LinkedIn"><i class="fab fa-linkedin"></i></a>
                  <a href="https://www.instagram.com/masini.pro/" target="_blank" aria-label="Instagram Professionale"><i class="fab fa-instagram-square"></i></a>
                  <a href="https://www.instagram.com/Fpp.masini/" target="_blank" aria-label="Instagram Privato"><i class="fab fa-instagram"></i></a>
                  <a href="https://www.paypal.com/paypalme/fppmasini" target="_blank" aria-label="PayPal"><i class="fab fa-paypal"></i></a>
             </div>
             <p class="privacy-notice">
-                Autorizzo il trattamento dei dati personali contenuti nel mio curriculum vitae in base all'art. 13 del D. Lgs. 196/2003 e all'art. 13 GDPR 679/16.
+                Autorizzo il trattamento dei dati personali contenuti nel mio curriculum vitae in base all'art. 13 del D. Lgs. 196/2003 e all'art. 13 GDPR 679/16. (Nota: Questa autorizzazione è più rilevante per un CV inviato, potresti considerare di rimuoverla o adattarla per un sito pubblico).
             </p>
             <p class="copyright">© <span id="current-year"></span> Filippo Masini. Tutti i diritti riservati.</p>
         </div>
