--- a/index.html
+++ b/index.html
@@ -14,7 +14,9 @@
 </head>
 <body>
 
-    <header class="hero-section">
+    <!-- Header section ora con sfondo immagine e overlay gradient -->
+    <header class="hero-section with-animated-bg">
+        <!-- Contenitore per il contenuto, sopra lo sfondo/overlay -->
         <div class="container hero-content-container">
             <img src="https://raw.githubusercontent.com/masini-pro/portfolio/refs/heads/main/Selfie_round.png" alt="Foto Profilo Filippo Masini" class="profile-pic">
             <div class="hero-text">
@@ -44,9 +46,9 @@
         </div> <!-- Fine .hero-content-container -->
     </header>
 
-    <!-- Main content area (lasciata vuota per semplicità) -->
+    <!-- Main content area -->
     <main id="main-content">
-        <!-- Qui potresti aggiungere contenuti futuri se necessario -->
+        <!-- Contenuto futuro -->
     </main>
 
     <footer class="footer">
@@ -66,7 +68,6 @@
     </footer>
 
     <script>
-        // Script semplice per aggiornare l'anno nel copyright
         document.getElementById('current-year').textContent = new Date().getFullYear();
     </script>
 
