--- a/index.html
+++ b/index.html
@@ -21,9 +21,10 @@
             <img src="https://raw.githubusercontent.com/masini-pro/portfolio/refs/heads/main/Selfie_round.png" alt="Foto Profilo Filippo Masini" class="profile-pic">
             <div class="hero-text">
                 <h1>Filippo Masini</h1>
-                <h2>Area Manager | Interior Design Sector</h2>
+                <!-- === Sottotitolo Modificato === -->
+                <h2>Area Manager</h2>
                 <p class="intro">
-                    Esperto nel settore dell'interior design con una forte visione internazionale. Connettiti con me attraverso i link qui sotto.
+                    Esperto nel settore dell'interior design con una forte visione internazionale. Connettiti con me attraverso i link sottostanti.
                 </p>
             </div>
             <div class="profile-links">
@@ -36,8 +37,9 @@
                 <a href="https://www.instagram.com/masini.pro/" target="_blank" aria-label="Instagram Professionale" class="link-button instagram-pro">
                     <i class="fab fa-instagram-square"></i> Instagram Pro
                 </a>
-                 <a href="https://www.instagram.com/Fpp.masini/" target="_blank" aria-label="Instagram Privato" class="link-button instagram-pers">
-                    <i class="fab fa-instagram"></i> Instagram Personale
+                 <!-- === Testo Bottone Modificato === -->
+                 <a href="https://www.instagram.com/Fpp.masini/" target="_blank" aria-label="Instagram" class="link-button instagram-pers">
+                    <i class="fab fa-instagram"></i> Instagram
                 </a>
                 <a href="https://www.paypal.com/paypalme/fppmasini" target="_blank" aria-label="PayPal" class="link-button paypal">
                     <i class="fab fa-paypal"></i> PayPal
@@ -60,7 +62,7 @@
              <div class="social-links-footer">
                  <a href="https://www.linkedin.com/in/fppmasini/" target="_blank" aria-label="LinkedIn"><i class="fab fa-linkedin"></i></a>
                  <a href="https://www.instagram.com/masini.pro/" target="_blank" aria-label="Instagram Professionale"><i class="fab fa-instagram-square"></i></a>
-                 <a href="https://www.instagram.com/Fpp.masini/" target="_blank" aria-label="Instagram Privato"><i class="fab fa-instagram"></i></a>
+                 <a href="https://www.instagram.com/Fpp.masini/" target="_blank" aria-label="Instagram"><i class="fab fa-instagram"></i></a>
                  <a href="https://www.paypal.com/paypalme/fppmasini" target="_blank" aria-label="PayPal"><i class="fab fa-paypal"></i></a>
             </div>
             <p class="copyright">© <span id="current-year"></span> Filippo Masini. Tutti i diritti riservati.</p>
